gapParser.js
// Generated from /media/sf_GitHub/gap-lint/gap.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "gap.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'function'", "'input'", "'local'", "'if'", "'then'", 
                     "'elif'", "'else'", "'fi'", "'return'", "'for'", "'while'", 
                     "'do'", "'od'", "'end'", "'in'", "'repeat'", "'until'", 
                     "'not'", "'or'", "'and'", "'='", "'<>'", "'>='", "'<='", 
                     "'^'", "'!'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", 
                     "':='", "','", "'.'", "'?'", "':'", "'->'", "'..'", 
                     "'!.'" ];

var symbolicNames = [ null, "Function", "Input", "Local", "If", "Then", 
                      "Elif", "Else", "Fi", "Return", "For", "While", "Do", 
                      "Od", "End", "In", "Repeat", "Until", "Not", "Or", 
                      "And", "Equals", "NEquals", "GTEquals", "LTEquals", 
                      "Pow", "Excl", "GT", "LT", "Plus", "Minus", "Star", 
                      "Slash", "Modulus", "OBrace", "CBrace", "OBracket", 
                      "CBracket", "OParen", "CParen", "SemiColon", "Assign", 
                      "Comma", "Dot", "QuestionMark", "Colon", "ShortHandFunction", 
                      "Range", "ComponentObject", "Boolean", "Number", "Quote", 
                      "TrippleQuote", "Identifier", "Comment", "Space", 
                      "EOL" ];

var ruleNames =  [ "parse", "block", "statement", "functionDecl", "doStatement", 
                   "ifStatement", "ifStat", "elseIfStat", "elseStat", "forStatement", 
                   "whileStatement", "repeatStatement", "idList", "exprList", 
                   "expression", "list", "tuple", "listEvaluation", "indexes" ];

function gapParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

gapParser.prototype = Object.create(antlr4.Parser.prototype);
gapParser.prototype.constructor = gapParser;

Object.defineProperty(gapParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

gapParser.EOF = antlr4.Token.EOF;
gapParser.Function = 1;
gapParser.Input = 2;
gapParser.Local = 3;
gapParser.If = 4;
gapParser.Then = 5;
gapParser.Elif = 6;
gapParser.Else = 7;
gapParser.Fi = 8;
gapParser.Return = 9;
gapParser.For = 10;
gapParser.While = 11;
gapParser.Do = 12;
gapParser.Od = 13;
gapParser.End = 14;
gapParser.In = 15;
gapParser.Repeat = 16;
gapParser.Until = 17;
gapParser.Not = 18;
gapParser.Or = 19;
gapParser.And = 20;
gapParser.Equals = 21;
gapParser.NEquals = 22;
gapParser.GTEquals = 23;
gapParser.LTEquals = 24;
gapParser.Pow = 25;
gapParser.Excl = 26;
gapParser.GT = 27;
gapParser.LT = 28;
gapParser.Plus = 29;
gapParser.Minus = 30;
gapParser.Star = 31;
gapParser.Slash = 32;
gapParser.Modulus = 33;
gapParser.OBrace = 34;
gapParser.CBrace = 35;
gapParser.OBracket = 36;
gapParser.CBracket = 37;
gapParser.OParen = 38;
gapParser.CParen = 39;
gapParser.SemiColon = 40;
gapParser.Assign = 41;
gapParser.Comma = 42;
gapParser.Dot = 43;
gapParser.QuestionMark = 44;
gapParser.Colon = 45;
gapParser.ShortHandFunction = 46;
gapParser.Range = 47;
gapParser.ComponentObject = 48;
gapParser.Boolean = 49;
gapParser.Number = 50;
gapParser.Quote = 51;
gapParser.TrippleQuote = 52;
gapParser.Identifier = 53;
gapParser.Comment = 54;
gapParser.Space = 55;
gapParser.EOL = 56;

gapParser.RULE_parse = 0;
gapParser.RULE_block = 1;
gapParser.RULE_statement = 2;
gapParser.RULE_functionDecl = 3;
gapParser.RULE_doStatement = 4;
gapParser.RULE_ifStatement = 5;
gapParser.RULE_ifStat = 6;
gapParser.RULE_elseIfStat = 7;
gapParser.RULE_elseStat = 8;
gapParser.RULE_forStatement = 9;
gapParser.RULE_whileStatement = 10;
gapParser.RULE_repeatStatement = 11;
gapParser.RULE_idList = 12;
gapParser.RULE_exprList = 13;
gapParser.RULE_expression = 14;
gapParser.RULE_list = 15;
gapParser.RULE_tuple = 16;
gapParser.RULE_listEvaluation = 17;
gapParser.RULE_indexes = 18;

function ParseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_parse;
    return this;
}

ParseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParseContext.prototype.constructor = ParseContext;

ParseContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ParseContext.prototype.EOF = function() {
    return this.getToken(gapParser.EOF, 0);
};




gapParser.ParseContext = ParseContext;

gapParser.prototype.parse = function() {

    var localctx = new ParseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, gapParser.RULE_parse);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 38;
        this.block();
        this.state = 39;
        this.match(gapParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};




gapParser.BlockContext = BlockContext;

gapParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, gapParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 42; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 41;
            this.statement();
            this.state = 44; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << gapParser.Function) | (1 << gapParser.If) | (1 << gapParser.Return) | (1 << gapParser.For) | (1 << gapParser.While) | (1 << gapParser.Do) | (1 << gapParser.Repeat) | (1 << gapParser.Not) | (1 << gapParser.Minus))) !== 0) || ((((_la - 36)) & ~0x1f) == 0 && ((1 << (_la - 36)) & ((1 << (gapParser.OBracket - 36)) | (1 << (gapParser.OParen - 36)) | (1 << (gapParser.Boolean - 36)) | (1 << (gapParser.Number - 36)) | (1 << (gapParser.Quote - 36)) | (1 << (gapParser.TrippleQuote - 36)) | (1 << (gapParser.Identifier - 36)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

StatementContext.prototype.SemiColon = function() {
    return this.getToken(gapParser.SemiColon, 0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.forStatement = function() {
    return this.getTypedRuleContext(ForStatementContext,0);
};

StatementContext.prototype.whileStatement = function() {
    return this.getTypedRuleContext(WhileStatementContext,0);
};

StatementContext.prototype.doStatement = function() {
    return this.getTypedRuleContext(DoStatementContext,0);
};

StatementContext.prototype.repeatStatement = function() {
    return this.getTypedRuleContext(RepeatStatementContext,0);
};

StatementContext.prototype.TrippleQuote = function() {
    return this.getToken(gapParser.TrippleQuote, 0);
};




gapParser.StatementContext = StatementContext;

gapParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, gapParser.RULE_statement);
    try {
        this.state = 65;
        switch(this._input.LA(1)) {
        case gapParser.Function:
        case gapParser.Return:
        case gapParser.Not:
        case gapParser.Minus:
        case gapParser.OBracket:
        case gapParser.OParen:
        case gapParser.Boolean:
        case gapParser.Number:
        case gapParser.Quote:
        case gapParser.Identifier:
            this.enterOuterAlt(localctx, 1);
            this.state = 46;
            this.expression(0);
            this.state = 47;
            this.match(gapParser.SemiColon);
            break;
        case gapParser.If:
            this.enterOuterAlt(localctx, 2);
            this.state = 49;
            this.ifStatement();
            this.state = 50;
            this.match(gapParser.SemiColon);
            break;
        case gapParser.For:
            this.enterOuterAlt(localctx, 3);
            this.state = 52;
            this.forStatement();
            this.state = 53;
            this.match(gapParser.SemiColon);
            break;
        case gapParser.While:
            this.enterOuterAlt(localctx, 4);
            this.state = 55;
            this.whileStatement();
            this.state = 56;
            this.match(gapParser.SemiColon);
            break;
        case gapParser.Do:
            this.enterOuterAlt(localctx, 5);
            this.state = 58;
            this.doStatement();
            this.state = 59;
            this.match(gapParser.SemiColon);
            break;
        case gapParser.Repeat:
            this.enterOuterAlt(localctx, 6);
            this.state = 61;
            this.repeatStatement();
            this.state = 62;
            this.match(gapParser.SemiColon);
            break;
        case gapParser.TrippleQuote:
            this.enterOuterAlt(localctx, 7);
            this.state = 64;
            this.match(gapParser.TrippleQuote);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FunctionDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_functionDecl;
    return this;
}

FunctionDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionDeclContext.prototype.constructor = FunctionDeclContext;

FunctionDeclContext.prototype.Function = function() {
    return this.getToken(gapParser.Function, 0);
};

FunctionDeclContext.prototype.OParen = function() {
    return this.getToken(gapParser.OParen, 0);
};

FunctionDeclContext.prototype.CParen = function() {
    return this.getToken(gapParser.CParen, 0);
};

FunctionDeclContext.prototype.End = function() {
    return this.getToken(gapParser.End, 0);
};

FunctionDeclContext.prototype.idList = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IdListContext);
    } else {
        return this.getTypedRuleContext(IdListContext,i);
    }
};

FunctionDeclContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

FunctionDeclContext.prototype.Local = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(gapParser.Local);
    } else {
        return this.getToken(gapParser.Local, i);
    }
};


FunctionDeclContext.prototype.SemiColon = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(gapParser.SemiColon);
    } else {
        return this.getToken(gapParser.SemiColon, i);
    }
};





gapParser.FunctionDeclContext = FunctionDeclContext;

gapParser.prototype.functionDecl = function() {

    var localctx = new FunctionDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, gapParser.RULE_functionDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        this.match(gapParser.Function);
        this.state = 68;
        this.match(gapParser.OParen);
        this.state = 70;
        _la = this._input.LA(1);
        if(_la===gapParser.Identifier) {
            this.state = 69;
            this.idList();
        }

        this.state = 72;
        this.match(gapParser.CParen);
        this.state = 78; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 78;
            switch(this._input.LA(1)) {
            case gapParser.Function:
            case gapParser.If:
            case gapParser.Return:
            case gapParser.For:
            case gapParser.While:
            case gapParser.Do:
            case gapParser.Repeat:
            case gapParser.Not:
            case gapParser.Minus:
            case gapParser.OBracket:
            case gapParser.OParen:
            case gapParser.Boolean:
            case gapParser.Number:
            case gapParser.Quote:
            case gapParser.TrippleQuote:
            case gapParser.Identifier:
                this.state = 73;
                this.statement();
                break;
            case gapParser.Local:
                this.state = 74;
                this.match(gapParser.Local);
                this.state = 75;
                this.idList();
                this.state = 76;
                this.match(gapParser.SemiColon);
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 80; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << gapParser.Function) | (1 << gapParser.Local) | (1 << gapParser.If) | (1 << gapParser.Return) | (1 << gapParser.For) | (1 << gapParser.While) | (1 << gapParser.Do) | (1 << gapParser.Repeat) | (1 << gapParser.Not) | (1 << gapParser.Minus))) !== 0) || ((((_la - 36)) & ~0x1f) == 0 && ((1 << (_la - 36)) & ((1 << (gapParser.OBracket - 36)) | (1 << (gapParser.OParen - 36)) | (1 << (gapParser.Boolean - 36)) | (1 << (gapParser.Number - 36)) | (1 << (gapParser.Quote - 36)) | (1 << (gapParser.TrippleQuote - 36)) | (1 << (gapParser.Identifier - 36)))) !== 0));
        this.state = 82;
        this.match(gapParser.End);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DoStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_doStatement;
    return this;
}

DoStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DoStatementContext.prototype.constructor = DoStatementContext;

DoStatementContext.prototype.Do = function() {
    return this.getToken(gapParser.Do, 0);
};

DoStatementContext.prototype.Od = function() {
    return this.getToken(gapParser.Od, 0);
};

DoStatementContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};




gapParser.DoStatementContext = DoStatementContext;

gapParser.prototype.doStatement = function() {

    var localctx = new DoStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, gapParser.RULE_doStatement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.match(gapParser.Do);
        this.state = 86;
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << gapParser.Function) | (1 << gapParser.If) | (1 << gapParser.Return) | (1 << gapParser.For) | (1 << gapParser.While) | (1 << gapParser.Do) | (1 << gapParser.Repeat) | (1 << gapParser.Not) | (1 << gapParser.Minus))) !== 0) || ((((_la - 36)) & ~0x1f) == 0 && ((1 << (_la - 36)) & ((1 << (gapParser.OBracket - 36)) | (1 << (gapParser.OParen - 36)) | (1 << (gapParser.Boolean - 36)) | (1 << (gapParser.Number - 36)) | (1 << (gapParser.Quote - 36)) | (1 << (gapParser.TrippleQuote - 36)) | (1 << (gapParser.Identifier - 36)))) !== 0)) {
            this.state = 85;
            this.block();
        }

        this.state = 88;
        this.match(gapParser.Od);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IfStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_ifStatement;
    return this;
}

IfStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfStatementContext.prototype.constructor = IfStatementContext;

IfStatementContext.prototype.ifStat = function() {
    return this.getTypedRuleContext(IfStatContext,0);
};

IfStatementContext.prototype.Fi = function() {
    return this.getToken(gapParser.Fi, 0);
};

IfStatementContext.prototype.elseIfStat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ElseIfStatContext);
    } else {
        return this.getTypedRuleContext(ElseIfStatContext,i);
    }
};

IfStatementContext.prototype.elseStat = function() {
    return this.getTypedRuleContext(ElseStatContext,0);
};




gapParser.IfStatementContext = IfStatementContext;

gapParser.prototype.ifStatement = function() {

    var localctx = new IfStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, gapParser.RULE_ifStatement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90;
        this.ifStat();
        this.state = 94;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===gapParser.Elif) {
            this.state = 91;
            this.elseIfStat();
            this.state = 96;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 98;
        _la = this._input.LA(1);
        if(_la===gapParser.Else) {
            this.state = 97;
            this.elseStat();
        }

        this.state = 100;
        this.match(gapParser.Fi);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IfStatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_ifStat;
    return this;
}

IfStatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfStatContext.prototype.constructor = IfStatContext;

IfStatContext.prototype.If = function() {
    return this.getToken(gapParser.If, 0);
};

IfStatContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

IfStatContext.prototype.Then = function() {
    return this.getToken(gapParser.Then, 0);
};

IfStatContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};




gapParser.IfStatContext = IfStatContext;

gapParser.prototype.ifStat = function() {

    var localctx = new IfStatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, gapParser.RULE_ifStat);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this.match(gapParser.If);
        this.state = 103;
        this.expression(0);
        this.state = 104;
        this.match(gapParser.Then);
        this.state = 106;
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << gapParser.Function) | (1 << gapParser.If) | (1 << gapParser.Return) | (1 << gapParser.For) | (1 << gapParser.While) | (1 << gapParser.Do) | (1 << gapParser.Repeat) | (1 << gapParser.Not) | (1 << gapParser.Minus))) !== 0) || ((((_la - 36)) & ~0x1f) == 0 && ((1 << (_la - 36)) & ((1 << (gapParser.OBracket - 36)) | (1 << (gapParser.OParen - 36)) | (1 << (gapParser.Boolean - 36)) | (1 << (gapParser.Number - 36)) | (1 << (gapParser.Quote - 36)) | (1 << (gapParser.TrippleQuote - 36)) | (1 << (gapParser.Identifier - 36)))) !== 0)) {
            this.state = 105;
            this.block();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ElseIfStatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_elseIfStat;
    return this;
}

ElseIfStatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ElseIfStatContext.prototype.constructor = ElseIfStatContext;

ElseIfStatContext.prototype.Elif = function() {
    return this.getToken(gapParser.Elif, 0);
};

ElseIfStatContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

ElseIfStatContext.prototype.Then = function() {
    return this.getToken(gapParser.Then, 0);
};

ElseIfStatContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};




gapParser.ElseIfStatContext = ElseIfStatContext;

gapParser.prototype.elseIfStat = function() {

    var localctx = new ElseIfStatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, gapParser.RULE_elseIfStat);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.match(gapParser.Elif);
        this.state = 109;
        this.expression(0);
        this.state = 110;
        this.match(gapParser.Then);
        this.state = 112;
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << gapParser.Function) | (1 << gapParser.If) | (1 << gapParser.Return) | (1 << gapParser.For) | (1 << gapParser.While) | (1 << gapParser.Do) | (1 << gapParser.Repeat) | (1 << gapParser.Not) | (1 << gapParser.Minus))) !== 0) || ((((_la - 36)) & ~0x1f) == 0 && ((1 << (_la - 36)) & ((1 << (gapParser.OBracket - 36)) | (1 << (gapParser.OParen - 36)) | (1 << (gapParser.Boolean - 36)) | (1 << (gapParser.Number - 36)) | (1 << (gapParser.Quote - 36)) | (1 << (gapParser.TrippleQuote - 36)) | (1 << (gapParser.Identifier - 36)))) !== 0)) {
            this.state = 111;
            this.block();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ElseStatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_elseStat;
    return this;
}

ElseStatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ElseStatContext.prototype.constructor = ElseStatContext;

ElseStatContext.prototype.Else = function() {
    return this.getToken(gapParser.Else, 0);
};

ElseStatContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};




gapParser.ElseStatContext = ElseStatContext;

gapParser.prototype.elseStat = function() {

    var localctx = new ElseStatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, gapParser.RULE_elseStat);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        this.match(gapParser.Else);
        this.state = 116;
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << gapParser.Function) | (1 << gapParser.If) | (1 << gapParser.Return) | (1 << gapParser.For) | (1 << gapParser.While) | (1 << gapParser.Do) | (1 << gapParser.Repeat) | (1 << gapParser.Not) | (1 << gapParser.Minus))) !== 0) || ((((_la - 36)) & ~0x1f) == 0 && ((1 << (_la - 36)) & ((1 << (gapParser.OBracket - 36)) | (1 << (gapParser.OParen - 36)) | (1 << (gapParser.Boolean - 36)) | (1 << (gapParser.Number - 36)) | (1 << (gapParser.Quote - 36)) | (1 << (gapParser.TrippleQuote - 36)) | (1 << (gapParser.Identifier - 36)))) !== 0)) {
            this.state = 115;
            this.block();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ForStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gapParser.RULE_forStatement;
    return this;
}

ForStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForStatementContext.prototype.constructor = ForStatementContext;

ForStatementContext.prototype.For = function() {
    return this.getToken(gapParser.For, 0);
};

ForStatementContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

ForStatementContext.prototype.In = function() {
    return this.getToken(gapParser.In, 0);
};

ForStatementContext.prototype.Do = function() {
    return this.getToken(gapParser.Do, 0);
};

ForStatementContext.prototype.Od = function() {
    return this.getToken(gapParser.Od, 0);
};
